v1.3.0.85:
- Make sure we always has nframes in PrismBrowser player

v1.3.0.84:
- Add path to steps and cats callback-function

v1.3.0.83:
- CXL Modifications to seperate Branche
- fix export Playblast to local
- sends callbacks from click on Categories to Prism_Ftrack-Functions.py
- renaming

v1.3.0.82:
- added support for Blender 2.93+
- fixed an error in Maya, when creating an Export state when the scenefile was saved in a category, which contained a "-" character
- fixed a bug that the "Force Version" popup was not working correctly in Houdini

v1.3.0.81:
- fixed a bug that tasknames on Blender export states incremented when reloading the state
- fixed some errors when syncing shot preview images with Shotgun

v1.3.0.80:
- added support for Maya 2022
- added support for Nuke 13
- made the lists in the Task Selection window resizable
- fixed a bug that children of nested asset folders were not displayed correctly in the Project Browser in some cases

v1.3.0.79:
- internal changes

v1.3.0.78:
- fixed an error dropping files in the scenefiles list in the Project Browser in some cases
- fixed an error when opening Blender scenes from the standalone Project Browser
- fixed an error that the Project Browser in Fusion didn't open in some cases

v1.3.0.77:
- updated Fusion integration including location option on WritePrism node and option to "Solo" a write node (Thanks to EmberLightVFX)
- fixed a bug that the local project path dialog could open in some cases when Prism was executed in commandline mode (like on Deadline)
- fixed an error when using master export versions and submitting a job to Deadline
- fixed an error when rendering or exporting to Windows network paths from Houdini in some cases
- fixed an error when syncing shots with Shotgun in some cases
- fixed a bug that asset exports in other locations than global were only visible when the asset existed in the global location as well

v1.3.0.76: