@@ -70,30 +70,41 @@ class Prism_Houdini_Integration(object):
             defaultpath = os.path.join(self.getHoudiniPath(), "bin", "houdini.exe")
             if os.path.exists(defaultpath):
                 execPath = defaultpath
+        elif platform.system() == "Linux":
+            defaultpath = os.path.join(self.getHoudiniPath(), "bin", "houdini")
+            if os.path.exists(defaultpath):
+                execPath = defaultpath
 
         return execPath
 
     @err_catcher(name=__name__)
     def getHoudiniPath(self):
-        try:
-            key = _winreg.OpenKey(
-                _winreg.HKEY_LOCAL_MACHINE,
-                "SOFTWARE\\Side Effects Software",
-                0,
-                _winreg.KEY_READ | _winreg.KEY_WOW64_64KEY,
-            )
-            validVersion = (_winreg.QueryValueEx(key, "ActiveVersion"))[0]
+        if platform.system() == "Windows":
+            try:
+                key = _winreg.OpenKey(
+                    _winreg.HKEY_LOCAL_MACHINE,
+                    "SOFTWARE\\Side Effects Software",
+                    0,
+                    _winreg.KEY_READ | _winreg.KEY_WOW64_64KEY,
+                )
+                validVersion = (_winreg.QueryValueEx(key, "ActiveVersion"))[0]
 
-            key = _winreg.OpenKey(
-                _winreg.HKEY_LOCAL_MACHINE,
-                "SOFTWARE\\Side Effects Software\\Houdini " + validVersion,
-                0,
-                _winreg.KEY_READ | _winreg.KEY_WOW64_64KEY,
-            )
+                key = _winreg.OpenKey(
+                    _winreg.HKEY_LOCAL_MACHINE,
+                    "SOFTWARE\\Side Effects Software\\Houdini " + validVersion,
+                    0,
+                    _winreg.KEY_READ | _winreg.KEY_WOW64_64KEY,
+                )
 
-            return (_winreg.QueryValueEx(key, "InstallPath"))[0]
+                return (_winreg.QueryValueEx(key, "InstallPath"))[0]
 
-        except:
+            except:
+                return ""
+        elif platform.system() == "Linux":
+            for p in glob.glob("/opt/hfs*"):
+                if os.path.exists(p):
+                    return p
+        else:
             return ""
 
     @err_catcher(name=__name__)
